200 - Fix background colors in dark mode for classic theme.

--- a/src/components/modus-wc-alert/modus-wc-alert.scss
+++ b/src/components/modus-wc-alert/modus-wc-alert.scss
@@ -35,22 +35,39 @@
 
 [data-theme='modus-classic-dark'] .modus-wc-alert {
   &.modus-wc-alert-info {
-    background-color: var(--modus-wc-color-blue-light);
+    background-color: color-mix(
+      in srgb,
+      var(--modus-wc-color-highlight-blue) 30%,
+      transparent
+    );
     border-color: var(--modus-wc-color-highlight-blue);
   }
 
   &.modus-wc-alert-error {
-    background-color: var(--modus-wc-color-red-light);
+    background-color: color-mix(
+      in srgb,
+      var(--modus-wc-color-red-light) 30%,
+      transparent
+    );
     border-color: var(--modus-wc-color-red);
   }
 
   &.modus-wc-alert-success {
-    background-color: var(--modus-wc-color-green-light);
+    background-color: color-mix(
+      in srgb,
+      var(--modus-wc-color-green-light) 30%,
+      transparent
+    );
     border-color: var(--modus-wc-color-green);
   }
 
   &.modus-wc-alert-warning {
-    background-color: var(--modus-wc-color-yellow-light);
+    background-color: color-mix(
+      in srgb,
+      var(--modus-wc-color-yellow-light) 30%,
+      transparent
+    );
     border-color: var(--modus-wc-color-yellow-dark);
+    color: var(--modus-wc-color-white);
   }
 }
